@@ -21,7 +21,6 @@ package org.checkstyle.suppressionxpathfilter.whitespace;
 
 import java.io.File;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -57,7 +56,7 @@ public class XpathRegressionGenericWhitespaceTest extends AbstractXpathTestSuppo
                     GenericWhitespaceCheck.MSG_WS_PRECEDED, ">"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathGenericWhitespaceEnd']]/OBJBLOCK"
                 + "/METHOD_DEF[./IDENT[@text='bad']]"
@@ -82,7 +81,7 @@ public class XpathRegressionGenericWhitespaceTest extends AbstractXpathTestSuppo
                     GenericWhitespaceCheck.MSG_WS_NOT_PRECEDED, "&"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT["
                 + "@text='InputXpathGenericWhitespaceNestedOne']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='bad']]/TYPE_PARAMETERS"
@@ -107,7 +106,7 @@ public class XpathRegressionGenericWhitespaceTest extends AbstractXpathTestSuppo
                     GenericWhitespaceCheck.MSG_WS_FOLLOWED, ">"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT["
                 + "@text='InputXpathGenericWhitespaceNestedTwo']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='bad']]/TYPE_PARAMETERS"
@@ -132,7 +131,7 @@ public class XpathRegressionGenericWhitespaceTest extends AbstractXpathTestSuppo
                     GenericWhitespaceCheck.MSG_WS_FOLLOWED, ">"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT["
                 + "@text='InputXpathGenericWhitespaceNestedThree']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='bad']]/TYPE_PARAMETERS"
@@ -157,7 +156,7 @@ public class XpathRegressionGenericWhitespaceTest extends AbstractXpathTestSuppo
                     GenericWhitespaceCheck.MSG_WS_FOLLOWED, ">"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT["
                 + "@text='InputXpathGenericWhitespaceSingleOne']]"
                 + "/OBJBLOCK/VARIABLE_DEF[./IDENT[@text='bad']]/ASSIGN/EXPR/METHOD_CALL"
@@ -182,7 +181,7 @@ public class XpathRegressionGenericWhitespaceTest extends AbstractXpathTestSuppo
                     GenericWhitespaceCheck.MSG_WS_ILLEGAL_FOLLOW, ">"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT["
                 + "@text='InputXpathGenericWhitespaceSingleTwo']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='bad']]/TYPE_PARAMETERS/GENERIC_END"
